# nidhugg

./: Makefile.am  configure.ac
src/: 2SAT.cpp  2SAT.h  AnnotatedTrace.h  Annotations.cpp  Annotations.h  Basis.cpp  Basis.h  CPid.h  Configuration.cpp  Configuration.h  DCInterpreter.cpp  DCInterpreter.h  DCTBHelpers.h  DCTraceBuilder.cpp  DCTraceBuilder.h  DPORDriver.cpp  DPORDriver.h  Event.h  Execution.cpp  HappensAfterGraph.cpp  HappensAfterGraph.h  HappensAfterGraphVclock.cpp  HappensAfterGraphVclock.h  HappensExactlyBefore.cpp  HappensExactlyBefore.h  HappensExactlyBeforeGen.h  IID.h  Interpreter.cpp  MRef.h  Makefile.am  POWERExecution.cpp  POWERInterpreter.cpp  PSOInterpreter.cpp  PSOTraceBuilder.cpp  PSOTraceBuilder.h  SpinAssumePass.cpp  StrModule.cpp  TSOPSOTraceBuilder.h  TSOTraceBuilder.cpp  TSOTraceBuilder.h  (+4 more)
src/tests/: bug1.c  pg-bug.c  qw2004-false.c  singleton-false.c  singleton-simplified-false.c  test1-false.c  test2-false.c
tests/: 2SAT_test.cpp  Makefile.am
